--- a/src/components/MenuBar/style.css
+++ b/src/components/MenuBar/style.css
@@ -1,7 +1,7 @@
 .SideMenu {
   min-height: 100vh;
   width: 220px;
-  background-color: aquamarine;
+  background-color: #29282c;
   display: flex;
   flex-direction: column;
   align-items: left;
