--- a/src/components/MenuBar/style.css
+++ b/src/components/MenuBar/style.css
@@ -1,5 +1,10 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 .SideMenu {
   min-height: 100vh;
+  /* min-width: 15vw; */
   width: 220px;
   background-color: #29282c;
   display: flex;
