--- a/src/components/Heading/style.css
+++ b/src/components/Heading/style.css
@@ -1,13 +1,11 @@
-* {
+/* * {
   margin-top: 0px;
   padding: 0px;
-}
+} */
 .header {
   background-color: #29282c;
   text-align: center;
   color: #ffffff;
   height: 10vh;
-}
-.text-heading {
-  margin: 5px;
+  width: 90vw;
 }
